# diff_by_time

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  package.sh
.github/workflows/: package.yml  update-tap.yml
docs/: homebrew_formula.md
docs/vhs/: dt-diff-file-date.tape  dt-diff.tape  dt-run.tape
package/: formula_template.rb  gen_formula.sh
scripts/: demo_prep.sh
src/: bash_parser.rs  config.rs  differ.rs  executor.rs  fuzzy_matcher.rs  i18n.rs  main.rs  storage.rs  store_manager.rs
tests/: cli_interaction.rs
