[package]
name = "dt"
version = "0.1.4"
edition = "2021"
license = "MIT"

[dependencies]
unicode-width = "0.1"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"
similar = { version = "2.2", features = ["unicode"] }
tempfile = "3.4"
pathdiff = "0.2"
toml = "0.8"
regex = "1.0"
crossterm = "0.27"
fuzzy-matcher = "0.3"
ctrlc = "3"
tree-sitter = "0.22"
tree-sitter-bash = "0.21"
